# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: gendiff.py  json_parsing.py  parser.py
gendiff/scripts/: main.py
tests/: test_gendiff.py
